fix the layout issues with the thankyou.css.

--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -175,7 +175,20 @@ td#thanks_r {
   text-shadow: #ffcc00 0px 2px 2px,  #555555 0px -2px 2px;
 }
 
-#thanks_btm a {
+#thanks_l a {
+  font-family: "Liberation Serif", "Times New Roman", Times, serif;
+  font-size: 24px;
+  font-weight: normal;
+  font-style: italic;
+  text-decoration: none;
+  color: #9362b1;
+}
+
+#thanks_l a:hover {
+  text-decoration: underline;
+}
+
+#thanks_r a {
   font-family: "Liberation Sans", Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #9362b1;
@@ -189,7 +202,7 @@ td#thanks_r {
   border-radius: 5px;
 }
 
-#thanks_btm a:hover {
+#thanks_r a:hover {
   background-color: #9362b1;
   color: #FFFFFF;
   text-shadow: #444444 2px 2px 3px;
